--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     document.write("<table> <tr> <th> Item </th> <th> Quantity </th> <th> Price </th> <th> Total </th> </tr>");
     document.write("<tr> <td> Hotdogs </td> <td>" + window.quantity.Hotdogs + "</td> <td> $" + window.prices.Hotdogs.toFixed(2)
                    + "</td> <td> " + (window.quantity.Hotdogs * window.prices.Hotdogs).toFixed(2) + "</td> </tr>");
+    document.write("<tr> <td> Fries </td> <td>" + window.quantity.Fries + "</td> <td> $" + window.prices.Fries.toFixed(2)
+                   + "</td> <td> " + (window.quantity.Fries * window.prices.Fries).toFixed(2) + "</td> </tr>");    
     document.write("</table>");
     document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = $" + window.prices.Hotdogs.toFixed(2) + 
                    " each, Hotdogs Total = $" + (window.quantity.Hotdogs * window.prices.Hotdogs).toFixed(2) + "<br>");
