--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                    + "</td> <td> " + (window.quantity.Hotdogs * window.prices.Hotdogs).toFixed(2) + "</td> </tr>");
     document.write("<tr> <td> Fries </td> <td>" + window.quantity.Fries + "</td> <td> $" + window.prices.Fries.toFixed(2)
                    + "</td> <td> " + (window.quantity.Fries * window.prices.Fries).toFixed(2) + "</td> </tr>");    
+    document.write("<tr> <td> Drinks </td> <td>" + window.quantity.Drinks + "</td> <td> $" + window.prices.Drinks.toFixed(2)
+                   + "</td> <td> " + (window.quantity.Drinks * window.prices.Drinks).toFixed(2) + "</td> </tr>");    
     document.write("</table>");
     document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = $" + window.prices.Hotdogs.toFixed(2) + 
                    " each, Hotdogs Total = $" + (window.quantity.Hotdogs * window.prices.Hotdogs).toFixed(2) + "<br>");
