--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     window.quantity = {Hotdogs: document.getElementById("Hotdogs").value,
                        Fries: document.getElementById("Fries").value,
                        Drinks: document.getElementById("Drinks").value};
+    document.write("<link rel='stylesheet' type='text/css' href='stylesheet.css'>");
   }
   
   //Calculate Prices
