--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                    + "</td> <td> $" + (window.quantity.Fries * window.prices.Fries).toFixed(2) + "</td> </tr>");    
     document.write("<tr> <td> Drinks </td> <td>" + window.quantity.Drinks + "</td> <td> $" + window.prices.Drinks.toFixed(2)
                    + "</td> <td> $" + (window.quantity.Drinks * window.prices.Drinks).toFixed(2) + "</td> </tr>");    
-    document.write("</table>");
+    document.write("</table> <br>");
     window.subtotal = parseFloat(window.quantity.Hotdogs * window.prices.Hotdogs) + 
                       parseFloat(window.quantity.Fries * window.prices.Fries) +
                       parseFloat(window.quantity.Drinks * window.prices.Drinks);
